app/styleguides/demo/components/article.css
/* stylelint-disable */
@import "_global/mixins";
@import "_global/fonts";
@import "_global/colors";

.alert {
  font-family: Verdana, sans-serif;
  font-size: em(12, 16);
  line-height: 1.5;
  border: em(1, 12) solid transparent;
  border-radius: em(4, 12);
  margin-bottom: em(7, 12);
  padding: em(15, 12);
  > p + p {
    margin-top: em(5);
  }
}
.alert-warning {
  background-color: #fcf8e3;
  border-color: #faebcc;
  color: #8a6d3b;
}

.component--article {
  counter-reset: annotated;
  padding-bottom: em(20);
  position: relative;
  word-wrap: break-word;
}
.article__header {
  display: inline-block;
  margin-bottom: em(30);
  .header__primary {
    @mixin article-font1;
    margin-bottom: em(15, 45);
  }
  .header__secondary {
    @mixin article-font3;
  }
}
.article__body {
  .body__header {
    margin-bottom: em(50);
    .lead {
      width: 100%;
      display: flex;
      justify-content: center;
      .component--brightcove {
        width: 100%;
        height: auto;
      }
      .component--image,
      .component--instagram-post,
      .component--tweet,
      .component--facebook-post {
        margin: 0;
        img {
          width: 100%;
          height: auto;
        }
      }
    }
  }
  .body__info {
    @mixin inline-block;
    width: em(widthOnGrid(2, 1));
    margin-right: em(widthOnGrid(0, 1));
    .info--left-top {
      margin-bottom: em(40);
    }
    .info__by-authors {
      @mixin article-font6;
      display: inline-flex;
      flex-wrap: wrap;
      white-space: pre-wrap;
      margin-bottom: em(15, 14);
      .author {
        @mixin article-font5;
        display: inline-flex;
        flex-wrap: wrap;
        @define-mixin author-name-color $articleType, $color {
          .component--article[data-article-type=$articleType] & a {
            color: $color;
          }
        }
        @mixin author-name-color entertainment, $sunsetOrange;
        @mixin author-name-color news, $lightningYellow;
        @mixin author-name-color sports, $azureRadience;
        @mixin author-name-color podcasts, $robinsEgg;
        .author__anchor {
          color: inherit;
          text-decoration: none;
          white-space: nowrap;
          &:first-child {
            padding-left: 0;
          }
        }
      }
      .source {
        @mixin article-font5;
        color: $black;
        display: inline-flex;
      }
    }
    .info__from-station {
      @mixin article-font5;
    }
    .info__timestamp {
      @mixin article-font9;
      display: block;
      .timestamp__update {}
      .timestamp__date {
        &.timestamp__date--small {
          display: none;
        }
      }
      .timestamp__time {
        display: block;
        @mixin large-screen {
          display: inline-block;
        }
      }
    }
  }
  .body__content {
    @mixin inline-block;
    width: calc(100% - em(widthOnGrid(2, 2)));
  }

  /** Vertical Images & Instagram Posts */
  &[data-lead-type=instagram],
  &[data-lead-orientation=vertical] {
    .body__header,
    .body__content {
      width: calc(100% - em(widthOnGrid(2, 2)));
      float: right;
    }
  }
}
@mixin large-screen {
  .article__body,
  .article__body[data-lead-type=instagram],
  .article__body[data-lead-orientation=vertical] {
    display: flex;
    flex-direction: column;
    .body__header,
    .body__info,
    .body__content {
      width: 100%;
    }
    .body__header {
      margin-bottom: em(20);
    }
    .body__info {
      margin-bottom: em(40);
      margin-right: 0;
      display: flex;
      justify-content: space-between;
      .info__by-authors {
        margin-bottom: em(10, 14);
      }
      .info--left-top {
        margin-right: em(20);
        margin-bottom: 0;
      }
    }
  }
}
@mixin medium-screen {
  .article__header {
    margin-bottom: em(25);
    .header__primary {
      @mixin article-font2;
      margin-bottom: em(15, 35);
    }
    .header__secondary {
      @mixin article-font4;
    }
  }
  .article__body,
  .article__body[data-lead-type=instagram],
  .article__body[data-lead-orientation=vertical] {
    .body__info {
      margin-bottom: em(50);
    }
  }
}
@mixin medium-small-screen {
  .article__body,
  .article__body[data-lead-type=instagram],
  .article__body[data-lead-orientation=vertical] {
    .body__header {
      width: calc(100% + em(40));
      margin: 0 em(-20) em(30);
    }
    .body__info {
      margin-bottom: em(40);
    }
  }
}
@mixin small-screen {
  .article__body,
  .article__body[data-lead-type=instagram],
  .article__body[data-lead-orientation=vertical] {
    .body__info {
      flex-direction: column;
      .info--left-top {
        margin-bottom: em(30);
      }
    }
    .body__info {
      margin-bottom: em(30);
    }
  }
}

.component--article {
  .body__word-count {
    background: #f4f4f4;
    clear: both;
    width: 100%;
    font-family: Helvetica, Arial, sans-serif;
    font-size: em(14, 16);
    font-weight: 400;
    line-height: em(16, 14);
    margin: em(20, 14) 0;
    padding: em(15, 14) em(20, 14);
    .initializing {
      color: #999;
      font-style: italic;
    }
  }
  .body__circulation {
    background: #f4f4f4;
    clear: both;
    margin: em(20) 0;
    width: 100%;
    .circulation--empty {
      color: #999;
      font-style: italic;
    }

    .circulation__title {
      font-family: Helvetica, Arial, sans-serif;
      font-size: em(24, 16);
      font-weight: 400;
      line-height: em(28, 24);
      margin: 0;
      padding: em(15, 24) em(20, 24);
    }

    .circulation__section {
      border-top: em(1) solid #e8e8e8;
      padding: em(15) em(20);
      .editor > form {
        background-color: #f4f4f4;
      }
      .subtitle {
        font-family: Helvetica, Arial, sans-serif;
        font-size: em(16, 16);
        font-weight: 700;
        line-height: em(28);
        margin: 0;
        padding: 0 0 em(10);
        &.circ-edit:after {
          color: #1782a9;
          content: 'Edit';
          font-family: Helvetica, Arial, sans-serif;
          font-size: em(16, 16);
          font-weight: 400;
          line-height: em(18);
          margin: 0 0 0 em(15);
        }
      }
      .items {
        list-style-type: none;
        margin: 0;
        padding: 0;
        .item + .item {
          margin-top: em(20);
        }
        .item-title {
          color: #4d4d4d;
          font-family: Helvetica, Arial, sans-serif;
          font-size: em(12, 16);
          font-weight: 400;
          line-height: em(14, 12);
          margin: 0;
          padding: 0 0 em(5, 12);
          text-transform: uppercase;
          &.required:after {
            color: #8bc0d4;
            content: 'required';
            font-family: Helvetica, Arial, sans-serif;
            font-size: em(12, 16);
            font-weight: 400;
            line-height: em(14, 12);
            margin: 0 0 0 em(15, 12);
            text-transform: lowercase;
          }
        }
        .item-data {
          font-family: Helvetica, Arial, sans-serif;
          font-size: em(14, 16);
          font-weight: 400;
          line-height: em(16, 14);
          margin: 0;
          padding: 0;
          .feedimg {
            height: auto;
            width: em(200);
          }
          .empty-feedimg {
            background-color: #d8d8d8;
            border: em(1) solid #999;
            height: em(150);
            width: em(200);
          }
          .feedlayout {
            align-items: center;
            display: none;
            height: em(28);
            justify-content: flex-start;
            margin: 0 em(5) 0 0;
            padding: 0;
            &.current {
              display: flex;
            }
            svg {
              display: block;
              height: auto;
              margin-right: em(10);
              width: em(30);
            }
          }
        }
      }
    }
  }
}
.clay-annotated {
  border-bottom: em(1) solid #1782a9;
  border-color: #103cbc;
  counter-increment: annotated;
  cursor: pointer;
  display: inline;
  &:after {
    box-shadow: 0 em(11, 10) 0 0 #fff;
    color: #103cbc;
    content: counter(annotated);
    display: inline-block;
    font: em(10, 16) / em(10, 16) Arial, sans-serif;
    padding: 0 0 0 em(2, 10);
    position: relative;
    top: em(-7, 10);
  }
}

.article__breadcrumb {
  margin-bottom: em(10);
  .breadcrumb__link {
    display: inline-block;
    @mixin article-font12;
    text-transform: uppercase;
    text-decoration: none;


    &--home {
      height: em(10, 14);
      width: em(10, 14);
      margin-right: em(13, 14);
      line-height: em(14, 14);

      &:before {
        display: none;
      }
    }
  }

  @define-mixin seperator $articleType, $color: $purple {
    .component--article[data-article-type=$articleType] & .breadcrumb__separator {
      @mixin article-font12;
      color: $color;
    }
  }

  @mixin seperator;
  @mixin seperator entertainment, $sunsetOrange;
  @mixin seperator news, $lightningYellow;
  @mixin seperator podcasts, $robinsEgg;
  @mixin seperator sports, $azureRadience;
}

